fix: removed horizontal scrolling

--- a/bootcamp/src/app/globals.css
+++ b/bootcamp/src/app/globals.css
@@ -5,6 +5,7 @@ font-size: 18;
 -webkit-text-fill-color: rgb(255, 255, 255);
 /* shadow */
 text-shadow: 0px 0px 15px rgb(0, 0, 0);
+overflow-x: hidden;
 }
 
 body {
